--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URL=mongodb+srv://raghu11:raghu11@cluster0.vuti4x5.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL=mongodb+srv://raghu11:PASSWORD@cluster0.vuti4x5.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=8000
 SECRET_KEY=cjdjdnkjnfjnuifhfuhhuhuhuvuhvju
